[package]
name = "forests"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
csv = "1.3.0"
rayon = "1.8.0"
hashbrown = { version = "0.14.1", features = ["serde"] }
parking_lot = "0.12.1"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["serde_derive", "rc"] }
serde_derive = "1.0.193"
find_peaks = "0.1.5"
rand_chacha = "0.3.1"
dtw_rs = "0.9.5"
lazy_static = "1.4.0"
rand_distr = "0.4.3"
catch22 = { git = "https://github.com/albertoazzari/catch22_rs.git", version = "0.1.0" }
atomic_float = "1.1.0"
dashmap = "6.1.0"
kodama = "0.3.0"

[profile.dev]
debug = 1

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0.83"
cmake = "0.1.50"


