[package]
name = "forust"
version = "0.0.1"
edition = "2021"

[lib]
name = "forust"

[dependencies]
csv = "1.3.0"
rayon = "1.8.0"
hashbrown = { version = "0.14.1", features = ["serde"] }
parking_lot = "0.12.1"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["serde_derive", "rc"] }
serde_derive = "1.0.193"
lazy_static = "1.4.0"
catch22 = { git = "https://github.com/albertoazzari/catch22_rs.git", version = "0.1.0" }
atomic_float = "1.1.0"
dashmap = "6.1.0"
kodama = "0.3.0"
sys-info = "0.9.1"
rmp-serde = "1.3.0"
rand_chacha = "0.9.0"
rand = "0.9.1"
rand_distr = "0.5.1"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
